--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@diff./bot-checker",
-  "version": "1.0.1",
-  "description": "Check bot(crawler or scrapper) by user-agent and ip",
+  "version": "1.0.2",
+  "description": "Check bot(crawler or scrapper) by ip",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
