--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,20 +4,17 @@
     "declaration": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
-    "target": "es5",
+    "target": "es6",
     "noImplicitAny": true,
     "moduleResolution": "node",
     "sourceMap": true,
     "baseUrl": ".",
-    "outDir": "dist-node",
-    "declarationDir": "dist",
+    "outDir": "dist",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "strictNullChecks": true,
     "strict": true,
     "strictPropertyInitialization": false,
-    "emitDeclarationOnly": true,
-    "isolatedModules": true,
     "typeRoots": ["node_modules/@types", "src/@types"]
   },
   "include": ["src/**/*"],
